# collie

./: .gitignore  Cargo.toml  LICENSE  PLUGIN.md  PRIVACY.md  README.md  SYMBOL-CONTRACT.md  TERMS.md
.agents/plugins/: marketplace.json
.agents/skills/: SKILL.md
.githooks/: pre-commit
.github/workflows/: pages.yml
benches/: generate_corpus.rs  search_benchmark.rs
benchmark-data/: agentic_tasks.json  production_profiles.json
plugins/collie/.codex-plugin/: plugin.json
plugins/collie/skills/use-collie/: SKILL.md
presentation/: index.html  playground.html
scripts/: benchmark_agentic.py  benchmark_production.py  benchmark_repo.py  benchmark_search.py  install_git_hooks.sh  install_personal_codex_plugin.py  sync_plugin_skill.py  verify_watcher_local.py
src/: benchmark.rs  config.rs  lib.rs  main.rs  mcp.rs  paths.rs  regex_search.rs
src/cli/: mcp_serve.rs  mcp_setup.rs  mod.rs  rebuild.rs  search.rs  status.rs  stop.rs  watch.rs
src/daemon/: mod.rs
src/indexer/: builder.rs  mod.rs  pdf.rs  tokenizer.rs
src/storage/: generation.rs  mod.rs  tantivy_index.rs
src/symbols/: mod.rs  query.rs
src/symbols/adapters/: c_lang.rs  cpp.rs  csharp.rs  go.rs  helpers.rs  java.rs  kotlin.rs  mod.rs  python.rs  ruby.rs  rust_lang.rs  typescript.rs  zig.rs
src/watcher/: mod.rs
tests/: acceptance.rs  benchmark_agentic_spec.rs  benchmark_correctness.rs  benchmark_production_spec.rs  benchmark_smoke.rs  cli_contract.rs  cli_regex_search.rs  cli_symbol_search.rs  config.rs  daemon_lifecycle.rs  file_watcher.rs  generation_lifecycle.rs  ignore_rules.rs  incremental_indexing.rs  mcp_server.rs  output_format.rs  query_correctness.rs  query_parser.rs  regex_search.rs  snippets.rs  symbol_conformance.rs  symbol_extraction.rs  symbol_search.rs  symbol_store.rs  tantivy_index.rs
tests/common/: mod.rs
