[package]
name = "collie-search"
version = "0.2.5"
edition = "2024"
description = "Index-backed code search. Faster than grep on large repos."
license = "MIT"
repository = "https://github.com/suleymanozkeskin/collie"
keywords = ["search", "code-search", "grep", "index", "tantivy"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
readme = "README.md"
autobenches = false
exclude = ["benchmark-data/", "benchmark-results/", "scripts/", "test-worktrees/", "large-repo-for-test/"]

[[bin]]
name = "collie"
path = "src/main.rs"

[[bin]]
name = "generate-corpus"
path = "benches/generate_corpus.rs"
required-features = ["_bench"]

[[bench]]
name = "search_benchmark"
harness = false

[dependencies]
# Core
memmap2 = "0.9"
notify = "6.1"
ignore = "0.4"
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
# tree-sitter-kotlin = "0.3"  # incompatible tree-sitter version
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-zig = "1.1"

# Storage
tantivy = "0.22"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Config
toml = "0.8"

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
rayon = "1.10"
crossbeam-channel = "0.5"
signal-hook = "0.3"
libc = "0.2"

# Hashing
fnv = "1.0"

# Daemon
daemonize = "0.5"

# PDF
pdf-extract = "0.7"

# Utilities
glob = "0.3"
regex = "1.10"
regex-syntax = "0.8"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
_bench = []

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
libc = "0.2"
